clusters/production/borgmatic/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: borgmatic
  labels:
    app.kubernetes.io/name: borgmatic
